[gd_scene load_steps=25 format=3 uid="uid://baynibb7k83wq"]

[ext_resource type="Script" path="res://scenes/level.gd" id="1_6saoy"]
[ext_resource type="Texture2D" uid="uid://dt37efymkod2n" path="res://assets/level/MainScene.png" id="1_pb4pk"]
[ext_resource type="Texture2D" uid="uid://coyrpkbfwng3l" path="res://assets/level/Landscape.png" id="2_f4dkd"]
[ext_resource type="Texture2D" uid="uid://d1sgu4yijayuc" path="res://assets/level/Machines.png" id="3_ms8y4"]
[ext_resource type="Texture2D" uid="uid://bco7sroyo3qxe" path="res://assets/level/Lightning-Landscape.png" id="4_yj3cv"]
[ext_resource type="Texture2D" uid="uid://bsqiettcrt7qc" path="res://assets/foods/hmaca.png" id="5_3ixt5"]
[ext_resource type="Material" uid="uid://kyxyf8hklqcp" path="res://assets/shaders/blackOutline.tres" id="7_s8vrt"]
[ext_resource type="Texture2D" uid="uid://cibr00qdn8o2x" path="res://assets/misc/brain.png" id="8_x1ou1"]
[ext_resource type="Shader" path="res://assets/shaders/vignette.gdshader" id="9_ppye1"]
[ext_resource type="Script" path="res://scenes/camera.gd" id="10_xjqjp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_drqg0"]
atlas = ExtResource("2_f4dkd")
region = Rect2(512, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqt3w"]
atlas = ExtResource("2_f4dkd")
region = Rect2(640, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qf55t"]
atlas = ExtResource("4_yj3cv")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_580bn"]
atlas = ExtResource("2_f4dkd")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ell57"]
atlas = ExtResource("2_f4dkd")
region = Rect2(128, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gb760"]
atlas = ExtResource("2_f4dkd")
region = Rect2(256, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikvoq"]
atlas = ExtResource("2_f4dkd")
region = Rect2(384, 0, 128, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_yylab"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_drqg0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqt3w")
}],
"loop": true,
"name": &"high",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qf55t")
}],
"loop": true,
"name": &"lightning_trans",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_580bn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ell57")
}],
"loop": true,
"name": &"low",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gb760")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikvoq")
}],
"loop": true,
"name": &"med",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_f55to"]
atlas = ExtResource("3_ms8y4")
region = Rect2(0, 0, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xtjt"]
atlas = ExtResource("3_ms8y4")
region = Rect2(128, 0, 128, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_nlalg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f55to")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xtjt")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qgl4o"]
bg_color = Color(0.835294, 0, 0, 1)
corner_radius_top_right = 5
corner_radius_bottom_right = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_canyj"]
bg_color = Color(0.501961, 0.054902, 0.713726, 1)
corner_radius_top_right = 5
corner_radius_bottom_right = 5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4tm5y"]
shader = ExtResource("9_ppye1")
shader_parameter/vignette_intensity = 0.0
shader_parameter/vignette_opacity = 0.5
shader_parameter/vignette_rgb = Color(0, 0, 0, 1)

[node name="Level" type="Node2D"]
script = ExtResource("1_6saoy")

[node name="Main" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(576, 324)
scale = Vector2(9, 10.125)
texture = ExtResource("1_pb4pk")

[node name="Landscape" type="AnimatedSprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(9, 10.125)
sprite_frames = SubResource("SpriteFrames_yylab")
animation = &"low"

[node name="Machines" type="AnimatedSprite2D" parent="."]
z_index = 2
position = Vector2(576, 324)
scale = Vector2(9, 10.125)
sprite_frames = SubResource("SpriteFrames_nlalg")

[node name="FoodSlot0" type="Marker2D" parent="."]
position = Vector2(378, 324)

[node name="FoodSlot1" type="Marker2D" parent="."]
position = Vector2(567, 324)

[node name="FoodSlot2" type="Marker2D" parent="."]
position = Vector2(756, 324)

[node name="spawnFoodTimer" type="Timer" parent="."]
wait_time = 4.5
autostart = true

[node name="debuffTimer" type="Timer" parent="."]
autostart = true

[node name="selectionCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="cameraShakeTimer" type="Timer" parent="."]
wait_time = 0.75

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SatBar" type="ProgressBar" parent="HUD"]
z_index = 2
layout_mode = 0
offset_left = 384.0
offset_top = 144.0
offset_right = 768.0
offset_bottom = 171.0
theme_override_styles/fill = SubResource("StyleBoxFlat_qgl4o")
value = 5.0

[node name="AnxBar" type="ProgressBar" parent="HUD"]
z_index = 2
layout_mode = 0
offset_left = 384.0
offset_top = 208.0
offset_right = 768.0
offset_bottom = 235.0
theme_override_styles/fill = SubResource("StyleBoxFlat_canyj")
value = 5.0

[node name="TextureRect" type="TextureRect" parent="HUD"]
z_index = 1
layout_mode = 0
offset_left = 336.0
offset_top = 134.0
offset_right = 432.0
offset_bottom = 230.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_3ixt5")

[node name="TextureRect2" type="TextureRect" parent="HUD"]
z_index = 1
material = ExtResource("7_s8vrt")
layout_mode = 0
offset_left = 336.0
offset_top = 200.0
offset_right = 384.0
offset_bottom = 248.0
texture = ExtResource("8_x1ou1")

[node name="VignetteRect" type="ColorRect" parent="HUD"]
z_index = 3
material = SubResource("ShaderMaterial_4tm5y")
offset_right = 1152.0
offset_bottom = 648.0
color = Color(1, 1, 1, 0)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)
zoom = Vector2(1.05, 1.05)
script = ExtResource("10_xjqjp")

[connection signal="timeout" from="spawnFoodTimer" to="." method="_on_spawn_food_timer_timeout"]
[connection signal="timeout" from="debuffTimer" to="." method="_on_debuff_timer_timeout"]
[connection signal="timeout" from="selectionCooldownTimer" to="." method="_on_selection_cooldown_timer_timeout"]
[connection signal="timeout" from="cameraShakeTimer" to="." method="_on_camera_shake_timer_timeout"]
